# sandbox_axum_observability

./: .gitignore  .rtx.toml  README.md  justfile
app/: .dockerignore  Cargo.toml  openapi.yaml
app/deploy/: Dockerfile  deploy-package.sh  load.k6.js  publish-package.sh
app/deploy/chart/: values.yaml  values_image.yaml
app/deploy/chart/templates/: deployment.yaml  hpa.yaml  linkerd-service-profile.yaml
app/src/: main.rs  opentelemetry_tools.rs
app/src/middleware/: opentelemetry.rs
infra/: install.sh  setup.sh
infra-compose/: docker-compose.yaml
infra/docker-compose/: docker-compose.yaml  otel-collector.yaml
infra/grafana/: values.yaml
infra/kubernetes/: config.yaml  helmfile.yaml  tools.nu  tools.sh
infra/kubernetes/cert-manager/: Chart.yaml  values.yaml
infra/kubernetes/grafana/: Chart.yaml  values.yaml
infra/kubernetes/kube-prometheus-stack/: Chart.yaml  values.yaml
infra/kubernetes/linkerd/: Chart.yaml  values.yaml
infra/kubernetes/linkerd-jaeger/: Chart.yaml  values.yaml
infra/kubernetes/linkerd-viz/: Chart.yaml  values.yaml
infra/kubernetes/linkerd-viz/grafana-dashboards/: authority.json  cronjob.json  daemonset.json  deployment.json  health.json  job.json  kubernetes.json  multicluster.json  namespace.json  pod.json  prometheus-benchmark.json  prometheus.json  replicaset.json  replicationcontroller.json  route.json  service.json  statefulset.json  top-line.json
infra/kubernetes/linkerd/certs/: ca.crt  ca.key  issuer.crt  issuer.key
infra/kubernetes/loki-distributed/: Chart.yaml  values.yaml
infra/kubernetes/loki-distributed/templates/: configmap-grafana-datasource.yaml
infra/kubernetes/minio/: Chart.yaml  values.yaml
infra/kubernetes/minio/templates/: deployment.yaml  service.yaml
infra/kubernetes/opentelemetry-collector/: Chart.yaml  values.yaml
infra/kubernetes/opentelemetry-operator/: Chart.yaml  values.yaml
infra/kubernetes/opentelemetry-operator/dashboard/: spanmetrics.json
infra/kubernetes/opentelemetry-operator/templates/: collector.yaml  instrumentation.yaml
infra/kubernetes/promtail/: Chart.yaml  values.yaml
infra/kubernetes/tempo-distributed/: Chart.yaml  values.yaml
infra/kubernetes/tempo-distributed/templates/: configmap-garfana-dashboard.yaml  configmap-grafana-datasource.yaml
infra/minio/: Chart.yaml
infra/minio/templates/: deployment.yaml  service.yaml
infra/tempo/: Chart.yaml  values.yaml
