[package]
name = "example-opentelemetry"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.5"
axum-tracing-opentelemetry = { version = "0.2", features = ["jaeger", "otlp"] }
clap = { version = "3.1", features = ["derive", "env"] }
http = "0.2"
opentelemetry = { version = "0.17", features = ["rt-tokio", "serialize"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10", features = [
  "http-proto",
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry-http = { version = "0.6.0" }
opentelemetry-semantic-conventions = { version = "0.9.0" }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = { version = "0.1" }
reqwest-tracing = { version = "0.2", features = ["opentelemetry_0_17"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
assert2 = "0.3.6"
mime = "0.3"
assert-json-diff = "2.0.1"
hyper = { version = "0.14", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
