[package]
name = "example-opentelemetry"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
# anyhow = "1.0"
axum-tracing-opentelemetry = "^0.13"
axum = "0.6"
# axum-tracing-opentelemetry = { path = "../../axum-tracing-opentelemetry", features = [
# axum-tracing-opentelemetry = { git = "https://github.com/davidB/axum-tracing-opentelemetry", features = [
#   "jaeger",
#   "otlp",
# ] }
clap = { version = "4.0", features = ["derive", "env"] }
http = "0.2"
init-tracing-opentelemetry = { version = "^0.13", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
# opentelemetry-http = { version = "0.9" }
# opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
# opentelemetry-otlp = { version = "0.13", features = [
#   "http-proto",
#   "reqwest-client",
#   "reqwest-rustls",
# ] }
# opentelemetry-semantic-conventions = { version = "0.12" }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = { version = "0.2" }
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_18"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = "0.1"
# tracing-opentelemetry = "0.20"
tracing-opentelemetry-instrumentation-sdk = "^0.13"
# tracing-subscriber = { version = "0.3", default-features = false, features = [
#   "env-filter",
#   "fmt",
#   "json",
# ] }
# url = "2.3"
# uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
assert-json-diff = "2.0"
assert2 = "0.3"
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"

[profile.release]
codegen-units = 1
lto = true
